--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,8 @@
 MySql:
-  Host: localhost
+  Host: test
   Port: 3306
-  Database: minecraft_EnderChest
-  UserName: mcadmin
-  TableName1: pl_ec_unlocked_page
-  TableName2: player_enderchest
-  PassWord: fhlasr_Minecraft
+  Database: test
+  UserName: test
+  TableName1: test
+  TableName2: test
+  PassWord: test
